<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e8e8e8"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/meta_order_number"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/orderNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:text="20171010-1234567"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/meta_order_date"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/orderDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:text="2017. 08. 20"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/meta_address"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/orderAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/meta_name"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/receiverName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/meta_phone"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/receiverPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:fontFamily="sans-serif"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>



            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/line"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >



                <TextView
                    android:id="@+id/orderSent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/whitebuttonclick"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding"
                    android:text="@string/order_sent"
                    android:textColor="#1f1b34"
                    android:textSize="15sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>